2009-08-10  David A. Capello  <davidcapello@gmail.com>

	* Version 0.7.1 released.

2009-08-09  David A. Capello  <davidcapello@gmail.com>

	* src/dialogs/filesel.cpp (ase_file_selector): Fixed a bug where
	new sprites where saved with lower case file names in Windows.

	* src/jinete/jentry.cpp (entry_msg_proc): Process Windows
	shortcuts to cut/paste (Ctrl+X, Ctrl+C, Ctrl+V).

	* src/jinete/jclipboard.cpp: Added support for Windows clipboard.

2009-08-04  David A. Capello  <davidcapello@gmail.com>

	* Version 0.7 released.

	* makefile.vc: Prepared to be compiled with VC++ 9.0 Express Edition.

2009-08-03  David A. Capello  <davidcapello@gmail.com>

	* Modified some error handling code from return-value to exceptions.

2009-08-02  David A. Capello  <davidcapello@gmail.com>

	* src/util/render.cpp (merge_zoomed_image): unified all
	merge_zoomed_image8/16/32 in one generic method (and fixed
	critical bugs).

2009-06-14  David A. Capello  <davidcapello@gmail.com>

	* src/commands/cmd_rotate_canvas.cpp: Added.

2009-06-11  David A. Capello  <davidcapello@gmail.com>

	* src/modules/gui.h (JWidgetPtr): Added to automatically delete
	the widget in the destructor.

	* src/modules/gui.cpp (load_widget/get_widgets): In case of error
	now they throw an exception.

	* src/sprite_wrappers.h: CurrentSprite class was split in
	SpriteWrapper/Reader/Writer, and CurrentSpriteReader/Writer
	wrappers.

	* src/console/console.h (Console): Added the class to
	automatically open/close the console (with RAII idiom).

2009-06-10  David A. Capello  <davidcapello@gmail.com>

	* src/modules/palettes.h: Added CurrentSpriteRgbMap class.

2009-06-04  David A. Capello  <davidcapello@gmail.com>

	* src/raster/sprite.h (Sprite): Added m_write_lock and
	m_read_locks members. Added lock(bool) and lock_to_write()
	methods.

2009-06-01  David A. Capello  <davidcapello@gmail.com>

	* src/ase/current_sprite.h (CurrentSprite): Added.

2009-05-31  David A. Capello  <davidcapello@gmail.com>
